Remove `none` badge's `box-shadow`

--- a/scss/common/_badge.scss
+++ b/scss/common/_badge.scss
@@ -121,6 +121,10 @@
 
   &.none {
     margin-right: $spacer-sm;
+
+    &[href]:hover {
+      box-shadow: none;
+    }
   }
 
   .badge-category .d-icon {
