Adjust list indentation in cooked post and editor preview

--- a/scss/common/_cooked.scss
+++ b/scss/common/_cooked.scss
@@ -64,7 +64,7 @@
   ol,
   ul {
     margin-bottom: $spacer;
-    padding-left: $spacer;
+    padding-left: $spacer-lg;
 
     ol,
     ul {
@@ -130,7 +130,7 @@
   ol,
   ul {
     margin-bottom: $spacer;
-    padding-left: $spacer;
+    padding-left: $spacer-lg;
 
     ol,
     ul {
