Minor fixes for topic list

--- a/scss/common/_topic-list-category.scss
+++ b/scss/common/_topic-list-category.scss
@@ -217,6 +217,10 @@
       }
     }
 
+    .bottom-row .discourse-tags {
+      display: inline-block;
+    }
+
     .top-row {
       font-size: inherit;
       margin-bottom: $spacer-xs;
