Clear caret icon background colour in category chooser

--- a/scss/common/_form-select2.scss
+++ b/scss/common/_form-select2.scss
@@ -330,6 +330,8 @@
     }
 
     .caret-icon {
+      background-color: transparent !important;
+      border: 0;
       margin-left: $spacer-xs;
     }
 
